Code cleanup (#206)